--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body>
   <div id="area-cabecalho">
 <div id="area-logo">
-TecBlog
+  <h1>Tec<span class="white">Blog</span></h1>
+
 </div>
 <div id="area-menu">
   <a href="index.html">Home</a>
