--- a/index.html
+++ b/index.html
@@ -1,26 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tecblog</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="area-cabecalho">
-<div id="area-logo">
-  <h1>Tec<span class="white">Blog</span></h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tecblog</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="area-cabecalho">
+      <div id="area-logo">
+        <h1>Tec<span class="white">Blog</span></h1>
+      </div>
+      <div id="area-menu">
+        <a href="index.html">Home</a>
+        <a href="jogos.html">Jogos</a>
+        <a href="celulares.html">Celulares</a>
+        <a href="informatica.html">Informática</a>
+        <a href="eletronico.html">Eletrônico</a>
+      </div>
+    </div>
 
-</div>
-<div id="area-menu">
-  <a href="index.html">Home</a>
-  <a href="jogos.html">Jogos</a>
-  <a href="celulares.html">Celulares</a>
-  <a href="informatica.html">Informática</a>
-  <a href="eletronico.html">Eletrônico</a>
+    <div id="area-principal">
+      <!-- Abertura postagem -->
+      <div id="area-postagens">
+        <div class="postagem">
+          <h2>Titulo da postagem 1 <span>postado 20 março 2022</span></h2>
+          <img src="assets/imagem1.jpg" alt="" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia nulla
+            omnis neque in minus commodi? Quod sapiente repudiandae culpa
+            molestiae dolores? Soluta eum ipsam ab laboriosam expedita ipsa sint
+            sit.
+          </p>
+          <a href="">Leia mais</a>
+        </div>
+        
+      </div>
+<!-- Fechamento postagem -->
+      <div id="area-lateral">Menu lateral</div>
 
-</div>
-  </div>
-</body>
+      <div id="rodape">Todos os direitos reservados</div>
+    </div>
+  </body>
 </html>
