--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <!-- Abertura postagem -->
       <div id="area-postagens">
         <div class="postagem">
-          <h2>Titulo da postagem 1 <span>postado 20 março 2022</span></h2>
+          <h2>Titulo da postagem 1</h2>
+          <span class="data-postagem">postado 20 março 2022</span>
           <img src="assets/imagem1.jpg" alt="" />
           <p>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia nulla
@@ -35,10 +36,61 @@
           </p>
           <a href="">Leia mais</a>
         </div>
-        
       </div>
-<!-- Fechamento postagem -->
-      <div id="area-lateral">Menu lateral</div>
+      <!-- Fechamento postagem -->
+
+      <!-- Abertura lateral -->
+      <div id="area-lateral">
+        <div class="conteudo-lateral">
+          <h3>Postagem recentes</h3>
+          <div class="postagem-lateral" style="border-bottom: none">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia
+              nulla omnis neque in minus commodi? Quod sapiente repudiandae
+              culpa molestiae dolores? Soluta eum ipsam ab laboriosam expedita
+              ipsa sint sit.
+              <a href="">Leia mais</a>
+            </p>
+          </div>
+
+          <hr />
+          <div class="postagem-lateral">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia
+              nulla omnis neque in minus commodi? Quod sapiente repudiandae
+              culpa molestiae dolores? Soluta eum ipsam ab laboriosam expedita
+              ipsa sint sit.
+              <a href="">Leia mais</a>
+            </p>
+          </div>
+        </div>
+        <div class="conteudo-lateral">
+          <h3>Categorias</h3>
+          <a href="index.html">Home</a> <br />
+          <a href="jogos.html">Jogos</a> <br />
+          <a href="celulares.html">Celulares</a> <br />
+          <a href="informatica.html">Informática</a> <br />
+          <a href="eletronico.html">Eletrônico</a> <br />
+        </div>
+      </div>
+      <!-- fechamento lateral -->
+
+      <!-- Abertura postagem -->
+      <div id="area-postagens">
+        <div class="postagem">
+          <h2>Titulo da postagem 2</h2>
+          <span class="data-postagem">postado 10 março 2022</span>
+          <img src="assets/imagem2.jpg" alt="" />
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quia nulla
+            omnis neque in minus commodi? Quod sapiente repudiandae culpa
+            molestiae dolores? Soluta eum ipsam ab laboriosam expedita ipsa sint
+            sit.
+          </p>
+          <a href="">Leia mais</a>
+        </div>
+      </div>
+      <!-- Fechamento postagem -->
 
       <div id="rodape">Todos os direitos reservados</div>
     </div>
